// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List Input by default matches existing snapshot 1`] = `
"<html><head></head><body><div class=\\"dm-list-input\\">
<fieldset class=\\"govuk-fieldset\\" aria-describedby=\\" \\" data-module=\\"dm-list-input\\">
  <legend class=\\"govuk-fieldset__legend dm-list-input__legend\\">
    What requirements are essential to carry out the work?
  </legend>
  

  <div class=\\"dm-list-input__item-container\\" role=\\"region\\" aria-live=\\"assertive\\">
<div class=\\"dm-list-input__item dm-list-input__item--visible\\"><div class=\\"dm-list-input__row\\">
          <div class=\\"govuk-form-group dm-list-input__form-group\\">
    <label class=\\"govuk-label dm-list-input__item-label \\" for=\\"my-list-1\\">
      <span class=\\"govuk-visually-hidden\\">What requirements are essential to carry out the work?. Number </span><span class=\\"dm-list-input__counter\\">1</span>.
    </label>
    <input class=\\"govuk-input govuk-input dm-list-input__item-input\\" id=\\"my-list-1\\" name=\\"requirements\\" type=\\"text\\">
  </div>
          <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-remove dm-list-input__item-remove--hidden\\" data-module=\\"govuk-button\\">
  Remove <span class=\\"govuk-visually-hidden\\">entry number <span class=\\"dm-list-input__counter\\">1</span></span>
</button>
        </div>
      </div>
<div class=\\"dm-list-input__item dm-list-input__item--visible\\"><div class=\\"dm-list-input__row\\">
          <div class=\\"govuk-form-group dm-list-input__form-group\\">
    <label class=\\"govuk-label dm-list-input__item-label \\" for=\\"my-list-2\\">
      <span class=\\"govuk-visually-hidden\\">What requirements are essential to carry out the work?. Number </span><span class=\\"dm-list-input__counter\\">2</span>.
    </label>
    <input class=\\"govuk-input govuk-input dm-list-input__item-input\\" id=\\"my-list-2\\" name=\\"requirements\\" type=\\"text\\">
  </div>
          <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-remove dm-list-input__item-remove--hidden\\" data-module=\\"govuk-button\\">
  Remove <span class=\\"govuk-visually-hidden\\">entry number <span class=\\"dm-list-input__counter\\">2</span></span>
</button>
        </div>
      </div>
<div class=\\"dm-list-input__item dm-list-input__item--visible\\"><div class=\\"dm-list-input__row\\">
          <div class=\\"govuk-form-group dm-list-input__form-group\\">
    <label class=\\"govuk-label dm-list-input__item-label \\" for=\\"my-list-3\\">
      <span class=\\"govuk-visually-hidden\\">What requirements are essential to carry out the work?. Number </span><span class=\\"dm-list-input__counter\\">3</span>.
    </label>
    <input class=\\"govuk-input govuk-input dm-list-input__item-input\\" id=\\"my-list-3\\" name=\\"requirements\\" type=\\"text\\">
  </div>
          <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-remove dm-list-input__item-remove--hidden\\" data-module=\\"govuk-button\\">
  Remove <span class=\\"govuk-visually-hidden\\">entry number <span class=\\"dm-list-input__counter\\">3</span></span>
</button>
        </div>
      </div>
<div class=\\"dm-list-input__item dm-list-input__item--visible\\"><div class=\\"dm-list-input__row\\">
          <div class=\\"govuk-form-group dm-list-input__form-group\\">
    <label class=\\"govuk-label dm-list-input__item-label \\" for=\\"my-list-4\\">
      <span class=\\"govuk-visually-hidden\\">What requirements are essential to carry out the work?. Number </span><span class=\\"dm-list-input__counter\\">4</span>.
    </label>
    <input class=\\"govuk-input govuk-input dm-list-input__item-input\\" id=\\"my-list-4\\" name=\\"requirements\\" type=\\"text\\">
  </div>
          <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-remove dm-list-input__item-remove--hidden\\" data-module=\\"govuk-button\\">
  Remove <span class=\\"govuk-visually-hidden\\">entry number <span class=\\"dm-list-input__counter\\">4</span></span>
</button>
        </div>
      </div>
<div class=\\"dm-list-input__item dm-list-input__item--visible\\"><div class=\\"dm-list-input__row\\">
          <div class=\\"govuk-form-group dm-list-input__form-group\\">
    <label class=\\"govuk-label dm-list-input__item-label \\" for=\\"my-list-5\\">
      <span class=\\"govuk-visually-hidden\\">What requirements are essential to carry out the work?. Number </span><span class=\\"dm-list-input__counter\\">5</span>.
    </label>
    <input class=\\"govuk-input govuk-input dm-list-input__item-input\\" id=\\"my-list-5\\" name=\\"requirements\\" type=\\"text\\">
  </div>
          <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-remove dm-list-input__item-remove--hidden\\" data-module=\\"govuk-button\\">
  Remove <span class=\\"govuk-visually-hidden\\">entry number <span class=\\"dm-list-input__counter\\">5</span></span>
</button>
        </div>
      </div>
<div class=\\"dm-list-input__item dm-list-input__item--visible\\"><div class=\\"dm-list-input__row\\">
          <div class=\\"govuk-form-group dm-list-input__form-group\\">
    <label class=\\"govuk-label dm-list-input__item-label \\" for=\\"my-list-6\\">
      <span class=\\"govuk-visually-hidden\\">What requirements are essential to carry out the work?. Number </span><span class=\\"dm-list-input__counter\\">6</span>.
    </label>
    <input class=\\"govuk-input govuk-input dm-list-input__item-input\\" id=\\"my-list-6\\" name=\\"requirements\\" type=\\"text\\">
  </div>
          <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-remove dm-list-input__item-remove--hidden\\" data-module=\\"govuk-button\\">
  Remove <span class=\\"govuk-visually-hidden\\">entry number <span class=\\"dm-list-input__counter\\">6</span></span>
</button>
        </div>
      </div>
<div class=\\"dm-list-input__item dm-list-input__item--visible\\"><div class=\\"dm-list-input__row\\">
          <div class=\\"govuk-form-group dm-list-input__form-group\\">
    <label class=\\"govuk-label dm-list-input__item-label \\" for=\\"my-list-7\\">
      <span class=\\"govuk-visually-hidden\\">What requirements are essential to carry out the work?. Number </span><span class=\\"dm-list-input__counter\\">7</span>.
    </label>
    <input class=\\"govuk-input govuk-input dm-list-input__item-input\\" id=\\"my-list-7\\" name=\\"requirements\\" type=\\"text\\">
  </div>
          <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-remove dm-list-input__item-remove--hidden\\" data-module=\\"govuk-button\\">
  Remove <span class=\\"govuk-visually-hidden\\">entry number <span class=\\"dm-list-input__counter\\">7</span></span>
</button>
        </div>
      </div>
<div class=\\"dm-list-input__item dm-list-input__item--visible\\"><div class=\\"dm-list-input__row\\">
          <div class=\\"govuk-form-group dm-list-input__form-group\\">
    <label class=\\"govuk-label dm-list-input__item-label \\" for=\\"my-list-8\\">
      <span class=\\"govuk-visually-hidden\\">What requirements are essential to carry out the work?. Number </span><span class=\\"dm-list-input__counter\\">8</span>.
    </label>
    <input class=\\"govuk-input govuk-input dm-list-input__item-input\\" id=\\"my-list-8\\" name=\\"requirements\\" type=\\"text\\">
  </div>
          <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-remove dm-list-input__item-remove--hidden\\" data-module=\\"govuk-button\\">
  Remove <span class=\\"govuk-visually-hidden\\">entry number <span class=\\"dm-list-input__counter\\">8</span></span>
</button>
        </div>
      </div>
<div class=\\"dm-list-input__item dm-list-input__item--visible\\"><div class=\\"dm-list-input__row\\">
          <div class=\\"govuk-form-group dm-list-input__form-group\\">
    <label class=\\"govuk-label dm-list-input__item-label \\" for=\\"my-list-9\\">
      <span class=\\"govuk-visually-hidden\\">What requirements are essential to carry out the work?. Number </span><span class=\\"dm-list-input__counter\\">9</span>.
    </label>
    <input class=\\"govuk-input govuk-input dm-list-input__item-input\\" id=\\"my-list-9\\" name=\\"requirements\\" type=\\"text\\">
  </div>
          <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-remove dm-list-input__item-remove--hidden\\" data-module=\\"govuk-button\\">
  Remove <span class=\\"govuk-visually-hidden\\">entry number <span class=\\"dm-list-input__counter\\">9</span></span>
</button>
        </div>
      </div>
<div class=\\"dm-list-input__item dm-list-input__item--visible\\"><div class=\\"dm-list-input__row\\">
          <div class=\\"govuk-form-group dm-list-input__form-group\\">
    <label class=\\"govuk-label dm-list-input__item-label \\" for=\\"my-list-10\\">
      <span class=\\"govuk-visually-hidden\\">What requirements are essential to carry out the work?. Number </span><span class=\\"dm-list-input__counter\\">10</span>.
    </label>
    <input class=\\"govuk-input govuk-input dm-list-input__item-input\\" id=\\"my-list-10\\" name=\\"requirements\\" type=\\"text\\">
  </div>
          <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-remove dm-list-input__item-remove--hidden\\" data-module=\\"govuk-button\\">
  Remove <span class=\\"govuk-visually-hidden\\">entry number <span class=\\"dm-list-input__counter\\">10</span></span>
</button>
        </div>
      </div>
  </div>
  <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-add dm-list-input__item-add--hidden\\" data-module=\\"govuk-button\\">
  Add another requirement (<span class=\\"dm-list-input__js-remaining-counter\\">0</span> remaining)
</button>
</fieldset>
</div>
</body></html>"
`;

exports[`List Input when it is optional matches existing snapshot 1`] = `
"<html><head></head><body><div class=\\"dm-list-input\\">
<fieldset class=\\"govuk-fieldset\\" aria-describedby=\\" \\" data-module=\\"dm-list-input\\">
  <legend class=\\"govuk-fieldset__legend dm-list-input__legend\\">
    What requirements are essential to carry out the work? (Optional)
  </legend>
  

  <div class=\\"dm-list-input__item-container\\" role=\\"region\\" aria-live=\\"assertive\\">
<div class=\\"dm-list-input__item dm-list-input__item--visible\\"><div class=\\"dm-list-input__row\\">
          <div class=\\"govuk-form-group dm-list-input__form-group\\">
    <label class=\\"govuk-label dm-list-input__item-label \\" for=\\"my-list-2-1\\">
      <span class=\\"govuk-visually-hidden\\">What requirements are essential to carry out the work?. Number </span><span class=\\"dm-list-input__counter\\">1</span>.
    </label>
    <input class=\\"govuk-input govuk-input dm-list-input__item-input\\" id=\\"my-list-2-1\\" name=\\"requirements\\" type=\\"text\\" value=\\"Professionally initiate innovative partnerships.\\">
  </div>
          <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-remove dm-list-input__item-remove--hidden\\" data-module=\\"govuk-button\\">
  Remove <span class=\\"govuk-visually-hidden\\">entry number <span class=\\"dm-list-input__counter\\">1</span></span>
</button>
        </div>
      </div>
<div class=\\"dm-list-input__item dm-list-input__item--visible\\"><div class=\\"dm-list-input__row\\">
          <div class=\\"govuk-form-group dm-list-input__form-group\\">
    <label class=\\"govuk-label dm-list-input__item-label \\" for=\\"my-list-2-2\\">
      <span class=\\"govuk-visually-hidden\\">What requirements are essential to carry out the work?. Number </span><span class=\\"dm-list-input__counter\\">2</span>.
    </label>
    <input class=\\"govuk-input govuk-input dm-list-input__item-input\\" id=\\"my-list-2-2\\" name=\\"requirements\\" type=\\"text\\">
  </div>
          <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-remove dm-list-input__item-remove--hidden\\" data-module=\\"govuk-button\\">
  Remove <span class=\\"govuk-visually-hidden\\">entry number <span class=\\"dm-list-input__counter\\">2</span></span>
</button>
        </div>
      </div>
<div class=\\"dm-list-input__item dm-list-input__item--visible\\"><div class=\\"dm-list-input__row\\">
          <div class=\\"govuk-form-group dm-list-input__form-group\\">
    <label class=\\"govuk-label dm-list-input__item-label \\" for=\\"my-list-2-3\\">
      <span class=\\"govuk-visually-hidden\\">What requirements are essential to carry out the work?. Number </span><span class=\\"dm-list-input__counter\\">3</span>.
    </label>
    <input class=\\"govuk-input govuk-input dm-list-input__item-input\\" id=\\"my-list-2-3\\" name=\\"requirements\\" type=\\"text\\">
  </div>
          <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-remove dm-list-input__item-remove--hidden\\" data-module=\\"govuk-button\\">
  Remove <span class=\\"govuk-visually-hidden\\">entry number <span class=\\"dm-list-input__counter\\">3</span></span>
</button>
        </div>
      </div>
  </div>
  <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-add dm-list-input__item-add--hidden\\" data-module=\\"govuk-button\\">
  Add another requirement (<span class=\\"dm-list-input__js-remaining-counter\\">0</span> remaining)
</button>
</fieldset>
</div>
</body></html>"
`;

exports[`List Input with errors with component-level error matches existing snapshot 1`] = `
"<html><head></head><body><div class=\\"dm-list-input govuk-form-group--error\\">
<fieldset class=\\"govuk-fieldset\\" aria-describedby=\\" my-list-2-error\\" data-module=\\"dm-list-input\\">
  <legend class=\\"govuk-fieldset__legend dm-list-input__legend\\">
    What requirements are essential to carry out the work?
  </legend>
    <span id=\\"my-list-2-error\\" class=\\"govuk-error-message\\">
  <span class=\\"govuk-visually-hidden\\">Error:</span> Enter at least one requirement
  </span>
  

  <div class=\\"dm-list-input__item-container\\" role=\\"region\\" aria-live=\\"assertive\\">
<div class=\\"dm-list-input__item dm-list-input__item--visible\\"><div class=\\"dm-list-input__row\\">
          <div class=\\"govuk-form-group dm-list-input__form-group\\">
    <label class=\\"govuk-label dm-list-input__item-label \\" for=\\"my-list-2-1\\">
      <span class=\\"govuk-visually-hidden\\">What requirements are essential to carry out the work?. Number </span><span class=\\"dm-list-input__counter\\">1</span>.
    </label>
    <input class=\\"govuk-input govuk-input dm-list-input__item-input\\" id=\\"my-list-2-1\\" name=\\"requirements\\" type=\\"text\\">
  </div>
          <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-remove dm-list-input__item-remove--hidden\\" data-module=\\"govuk-button\\">
  Remove <span class=\\"govuk-visually-hidden\\">entry number <span class=\\"dm-list-input__counter\\">1</span></span>
</button>
        </div>
      </div>
<div class=\\"dm-list-input__item dm-list-input__item--visible\\"><div class=\\"dm-list-input__row\\">
          <div class=\\"govuk-form-group dm-list-input__form-group\\">
    <label class=\\"govuk-label dm-list-input__item-label \\" for=\\"my-list-2-2\\">
      <span class=\\"govuk-visually-hidden\\">What requirements are essential to carry out the work?. Number </span><span class=\\"dm-list-input__counter\\">2</span>.
    </label>
    <input class=\\"govuk-input govuk-input dm-list-input__item-input\\" id=\\"my-list-2-2\\" name=\\"requirements\\" type=\\"text\\">
  </div>
          <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-remove dm-list-input__item-remove--hidden\\" data-module=\\"govuk-button\\">
  Remove <span class=\\"govuk-visually-hidden\\">entry number <span class=\\"dm-list-input__counter\\">2</span></span>
</button>
        </div>
      </div>
<div class=\\"dm-list-input__item dm-list-input__item--visible\\"><div class=\\"dm-list-input__row\\">
          <div class=\\"govuk-form-group dm-list-input__form-group\\">
    <label class=\\"govuk-label dm-list-input__item-label \\" for=\\"my-list-2-3\\">
      <span class=\\"govuk-visually-hidden\\">What requirements are essential to carry out the work?. Number </span><span class=\\"dm-list-input__counter\\">3</span>.
    </label>
    <input class=\\"govuk-input govuk-input dm-list-input__item-input\\" id=\\"my-list-2-3\\" name=\\"requirements\\" type=\\"text\\">
  </div>
          <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-remove dm-list-input__item-remove--hidden\\" data-module=\\"govuk-button\\">
  Remove <span class=\\"govuk-visually-hidden\\">entry number <span class=\\"dm-list-input__counter\\">3</span></span>
</button>
        </div>
      </div>
  </div>
  <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-add dm-list-input__item-add--hidden\\" data-module=\\"govuk-button\\">
  Add another requirement (<span class=\\"dm-list-input__js-remaining-counter\\">0</span> remaining)
</button>
</fieldset>
</div>
</body></html>"
`;

exports[`List Input with errors with input-level errors matches existing snapshot 1`] = `
"<html><head></head><body><div class=\\"dm-list-input\\">
<fieldset class=\\"govuk-fieldset\\" aria-describedby=\\"my-list-3-hint \\" data-module=\\"dm-list-input\\">
  <legend class=\\"govuk-fieldset__legend dm-list-input__legend\\">
    What requirements are essential to carry out the work?
  </legend>
    <div id=\\"my-list-3-hint\\" class=\\"govuk-hint dm-list-input__hint \\">
    Include the technical features of your product, eg graphical workflow, remote access. (Maximum 10 words per feature. Maximum 10 features.)
  </div>
  

  <div class=\\"dm-list-input__item-container\\" role=\\"region\\" aria-live=\\"assertive\\">
<div class=\\"dm-list-input__item dm-list-input__item--visible\\"><div class=\\"dm-list-input__row\\">
          <div class=\\"govuk-form-group dm-list-input__form-group\\">
    <label class=\\"govuk-label dm-list-input__item-label \\" for=\\"my-list-3-1\\">
      <span class=\\"govuk-visually-hidden\\">What requirements are essential to carry out the work?. Number </span><span class=\\"dm-list-input__counter\\">1</span>.
    </label>
    <input class=\\"govuk-input govuk-input dm-list-input__item-input\\" id=\\"my-list-3-1\\" name=\\"requirements\\" type=\\"text\\" value=\\"Professionally initiate innovative partnerships.\\">
  </div>
          <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-remove dm-list-input__item-remove--hidden\\" data-module=\\"govuk-button\\">
  Remove <span class=\\"govuk-visually-hidden\\">entry number <span class=\\"dm-list-input__counter\\">1</span></span>
</button>
        </div>
      </div>
<div class=\\"dm-list-input__item dm-list-input__item--visible dm-list-input__item--error \\"><div class=\\"dm-list-input__row\\">
          <div class=\\"govuk-form-group govuk-form-group--error dm-list-input__form-group\\">
    <label class=\\"govuk-label dm-list-input__item-label \\" for=\\"my-list-3-2\\">
      <span class=\\"govuk-visually-hidden\\">What requirements are essential to carry out the work?. Number </span><span class=\\"dm-list-input__counter\\">2</span>.
    </label>
    <span id=\\"my-list-3-2-error\\" class=\\"govuk-error-message dm-list-input-error-message  \\">
    <span class=\\"govuk-visually-hidden\\">Error:</span> Feature must be 5 words or fewer
    </span>
    <input class=\\"govuk-input govuk-input dm-list-input__item-input govuk-input--error\\" id=\\"my-list-3-2\\" name=\\"requirements\\" type=\\"text\\" value=\\"Synergistically iterate scalable leadership skills without competitive testing procedures. Quickly envisioneer.\\" aria-describedby=\\"my-list-3-2-error\\">
  </div>
          <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-remove dm-list-input__item-remove--hidden\\" data-module=\\"govuk-button\\">
  Remove <span class=\\"govuk-visually-hidden\\">entry number <span class=\\"dm-list-input__counter\\">2</span></span>
</button>
        </div>
      </div>
<div class=\\"dm-list-input__item dm-list-input__item--visible dm-list-input__item--error \\"><div class=\\"dm-list-input__row\\">
          <div class=\\"govuk-form-group govuk-form-group--error dm-list-input__form-group\\">
    <label class=\\"govuk-label dm-list-input__item-label \\" for=\\"my-list-3-3\\">
      <span class=\\"govuk-visually-hidden\\">What requirements are essential to carry out the work?. Number </span><span class=\\"dm-list-input__counter\\">3</span>.
    </label>
    <span id=\\"my-list-3-3-error\\" class=\\"govuk-error-message dm-list-input-error-message  \\">
    <span class=\\"govuk-visually-hidden\\">Error:</span> Enter a number
    </span>
    <input class=\\"govuk-input govuk-input dm-list-input__item-input govuk-input--error\\" id=\\"my-list-3-3\\" name=\\"requirements\\" type=\\"text\\" value=\\"Saturday Night Fever\\" aria-describedby=\\"my-list-3-3-error\\">
  </div>
          <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-remove dm-list-input__item-remove--hidden\\" data-module=\\"govuk-button\\">
  Remove <span class=\\"govuk-visually-hidden\\">entry number <span class=\\"dm-list-input__counter\\">3</span></span>
</button>
        </div>
      </div>
  </div>
  <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-add dm-list-input__item-add--hidden\\" data-module=\\"govuk-button\\">
  Add another requirement (<span class=\\"dm-list-input__js-remaining-counter\\">0</span> remaining)
</button>
</fieldset>
</div>
</body></html>"
`;

exports[`List Input with existing values matches existing snapshot 1`] = `
"<html><head></head><body><div class=\\"dm-list-input\\">
<fieldset class=\\"govuk-fieldset\\" aria-describedby=\\" \\" data-module=\\"dm-list-input\\">
  <legend class=\\"govuk-fieldset__legend dm-list-input__legend\\">
    What requirements are essential to carry out the work?
  </legend>
  

  <div class=\\"dm-list-input__item-container\\" role=\\"region\\" aria-live=\\"assertive\\">
<div class=\\"dm-list-input__item dm-list-input__item--visible\\"><div class=\\"dm-list-input__row\\">
          <div class=\\"govuk-form-group dm-list-input__form-group\\">
    <label class=\\"govuk-label dm-list-input__item-label \\" for=\\"my-list-1\\">
      <span class=\\"govuk-visually-hidden\\">What requirements are essential to carry out the work?. Number </span><span class=\\"dm-list-input__counter\\">1</span>.
    </label>
    <input class=\\"govuk-input govuk-input dm-list-input__item-input\\" id=\\"my-list-1\\" name=\\"requirements\\" type=\\"text\\" value=\\"Professionally initiate innovative partnerships.\\">
  </div>
          <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-remove dm-list-input__item-remove--hidden\\" data-module=\\"govuk-button\\">
  Remove <span class=\\"govuk-visually-hidden\\">entry number <span class=\\"dm-list-input__counter\\">1</span></span>
</button>
        </div>
      </div>
<div class=\\"dm-list-input__item dm-list-input__item--visible\\"><div class=\\"dm-list-input__row\\">
          <div class=\\"govuk-form-group dm-list-input__form-group\\">
    <label class=\\"govuk-label dm-list-input__item-label \\" for=\\"my-list-2\\">
      <span class=\\"govuk-visually-hidden\\">What requirements are essential to carry out the work?. Number </span><span class=\\"dm-list-input__counter\\">2</span>.
    </label>
    <input class=\\"govuk-input govuk-input dm-list-input__item-input\\" id=\\"my-list-2\\" name=\\"requirements\\" type=\\"text\\" value=\\"Synergistically iterate scalable leadership skills without competitive testing procedures. Quickly envisioneer.\\">
  </div>
          <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-remove dm-list-input__item-remove--hidden\\" data-module=\\"govuk-button\\">
  Remove <span class=\\"govuk-visually-hidden\\">entry number <span class=\\"dm-list-input__counter\\">2</span></span>
</button>
        </div>
      </div>
<div class=\\"dm-list-input__item dm-list-input__item--visible\\"><div class=\\"dm-list-input__row\\">
          <div class=\\"govuk-form-group dm-list-input__form-group\\">
    <label class=\\"govuk-label dm-list-input__item-label \\" for=\\"my-list-3\\">
      <span class=\\"govuk-visually-hidden\\">What requirements are essential to carry out the work?. Number </span><span class=\\"dm-list-input__counter\\">3</span>.
    </label>
    <input class=\\"govuk-input govuk-input dm-list-input__item-input\\" id=\\"my-list-3\\" name=\\"requirements\\" type=\\"text\\">
  </div>
          <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-remove dm-list-input__item-remove--hidden\\" data-module=\\"govuk-button\\">
  Remove <span class=\\"govuk-visually-hidden\\">entry number <span class=\\"dm-list-input__counter\\">3</span></span>
</button>
        </div>
      </div>
<div class=\\"dm-list-input__item dm-list-input__item--visible\\"><div class=\\"dm-list-input__row\\">
          <div class=\\"govuk-form-group dm-list-input__form-group\\">
    <label class=\\"govuk-label dm-list-input__item-label \\" for=\\"my-list-4\\">
      <span class=\\"govuk-visually-hidden\\">What requirements are essential to carry out the work?. Number </span><span class=\\"dm-list-input__counter\\">4</span>.
    </label>
    <input class=\\"govuk-input govuk-input dm-list-input__item-input\\" id=\\"my-list-4\\" name=\\"requirements\\" type=\\"text\\">
  </div>
          <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-remove dm-list-input__item-remove--hidden\\" data-module=\\"govuk-button\\">
  Remove <span class=\\"govuk-visually-hidden\\">entry number <span class=\\"dm-list-input__counter\\">4</span></span>
</button>
        </div>
      </div>
<div class=\\"dm-list-input__item dm-list-input__item--visible\\"><div class=\\"dm-list-input__row\\">
          <div class=\\"govuk-form-group dm-list-input__form-group\\">
    <label class=\\"govuk-label dm-list-input__item-label \\" for=\\"my-list-5\\">
      <span class=\\"govuk-visually-hidden\\">What requirements are essential to carry out the work?. Number </span><span class=\\"dm-list-input__counter\\">5</span>.
    </label>
    <input class=\\"govuk-input govuk-input dm-list-input__item-input\\" id=\\"my-list-5\\" name=\\"requirements\\" type=\\"text\\">
  </div>
          <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-remove dm-list-input__item-remove--hidden\\" data-module=\\"govuk-button\\">
  Remove <span class=\\"govuk-visually-hidden\\">entry number <span class=\\"dm-list-input__counter\\">5</span></span>
</button>
        </div>
      </div>
<div class=\\"dm-list-input__item dm-list-input__item--visible\\"><div class=\\"dm-list-input__row\\">
          <div class=\\"govuk-form-group dm-list-input__form-group\\">
    <label class=\\"govuk-label dm-list-input__item-label \\" for=\\"my-list-6\\">
      <span class=\\"govuk-visually-hidden\\">What requirements are essential to carry out the work?. Number </span><span class=\\"dm-list-input__counter\\">6</span>.
    </label>
    <input class=\\"govuk-input govuk-input dm-list-input__item-input\\" id=\\"my-list-6\\" name=\\"requirements\\" type=\\"text\\">
  </div>
          <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-remove dm-list-input__item-remove--hidden\\" data-module=\\"govuk-button\\">
  Remove <span class=\\"govuk-visually-hidden\\">entry number <span class=\\"dm-list-input__counter\\">6</span></span>
</button>
        </div>
      </div>
<div class=\\"dm-list-input__item dm-list-input__item--visible\\"><div class=\\"dm-list-input__row\\">
          <div class=\\"govuk-form-group dm-list-input__form-group\\">
    <label class=\\"govuk-label dm-list-input__item-label \\" for=\\"my-list-7\\">
      <span class=\\"govuk-visually-hidden\\">What requirements are essential to carry out the work?. Number </span><span class=\\"dm-list-input__counter\\">7</span>.
    </label>
    <input class=\\"govuk-input govuk-input dm-list-input__item-input\\" id=\\"my-list-7\\" name=\\"requirements\\" type=\\"text\\">
  </div>
          <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-remove dm-list-input__item-remove--hidden\\" data-module=\\"govuk-button\\">
  Remove <span class=\\"govuk-visually-hidden\\">entry number <span class=\\"dm-list-input__counter\\">7</span></span>
</button>
        </div>
      </div>
<div class=\\"dm-list-input__item dm-list-input__item--visible\\"><div class=\\"dm-list-input__row\\">
          <div class=\\"govuk-form-group dm-list-input__form-group\\">
    <label class=\\"govuk-label dm-list-input__item-label \\" for=\\"my-list-8\\">
      <span class=\\"govuk-visually-hidden\\">What requirements are essential to carry out the work?. Number </span><span class=\\"dm-list-input__counter\\">8</span>.
    </label>
    <input class=\\"govuk-input govuk-input dm-list-input__item-input\\" id=\\"my-list-8\\" name=\\"requirements\\" type=\\"text\\">
  </div>
          <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-remove dm-list-input__item-remove--hidden\\" data-module=\\"govuk-button\\">
  Remove <span class=\\"govuk-visually-hidden\\">entry number <span class=\\"dm-list-input__counter\\">8</span></span>
</button>
        </div>
      </div>
<div class=\\"dm-list-input__item dm-list-input__item--visible\\"><div class=\\"dm-list-input__row\\">
          <div class=\\"govuk-form-group dm-list-input__form-group\\">
    <label class=\\"govuk-label dm-list-input__item-label \\" for=\\"my-list-9\\">
      <span class=\\"govuk-visually-hidden\\">What requirements are essential to carry out the work?. Number </span><span class=\\"dm-list-input__counter\\">9</span>.
    </label>
    <input class=\\"govuk-input govuk-input dm-list-input__item-input\\" id=\\"my-list-9\\" name=\\"requirements\\" type=\\"text\\">
  </div>
          <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-remove dm-list-input__item-remove--hidden\\" data-module=\\"govuk-button\\">
  Remove <span class=\\"govuk-visually-hidden\\">entry number <span class=\\"dm-list-input__counter\\">9</span></span>
</button>
        </div>
      </div>
<div class=\\"dm-list-input__item dm-list-input__item--visible\\"><div class=\\"dm-list-input__row\\">
          <div class=\\"govuk-form-group dm-list-input__form-group\\">
    <label class=\\"govuk-label dm-list-input__item-label \\" for=\\"my-list-10\\">
      <span class=\\"govuk-visually-hidden\\">What requirements are essential to carry out the work?. Number </span><span class=\\"dm-list-input__counter\\">10</span>.
    </label>
    <input class=\\"govuk-input govuk-input dm-list-input__item-input\\" id=\\"my-list-10\\" name=\\"requirements\\" type=\\"text\\">
  </div>
          <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-remove dm-list-input__item-remove--hidden\\" data-module=\\"govuk-button\\">
  Remove <span class=\\"govuk-visually-hidden\\">entry number <span class=\\"dm-list-input__counter\\">10</span></span>
</button>
        </div>
      </div>
  </div>
  <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-add dm-list-input__item-add--hidden\\" data-module=\\"govuk-button\\">
  Add another requirement (<span class=\\"dm-list-input__js-remaining-counter\\">0</span> remaining)
</button>
</fieldset>
</div>
</body></html>"
`;

exports[`List Input with hint matches existing snapshot 1`] = `
"<html><head></head><body><div class=\\"dm-list-input\\">
<fieldset class=\\"govuk-fieldset\\" aria-describedby=\\"my-list-2-hint \\" data-module=\\"dm-list-input\\">
  <legend class=\\"govuk-fieldset__legend dm-list-input__legend\\">
    What requirements are essential to carry out the work?
  </legend>
    <div id=\\"my-list-2-hint\\" class=\\"govuk-hint dm-list-input__hint \\">
    Include the technical features of your product, eg graphical workflow, remote access. (Maximum 10 words per feature. Maximum 10 features.)
  </div>
  

  <div class=\\"dm-list-input__item-container\\" role=\\"region\\" aria-live=\\"assertive\\">
<div class=\\"dm-list-input__item dm-list-input__item--visible\\"><div class=\\"dm-list-input__row\\">
          <div class=\\"govuk-form-group dm-list-input__form-group\\">
    <label class=\\"govuk-label dm-list-input__item-label \\" for=\\"my-list-2-1\\">
      <span class=\\"govuk-visually-hidden\\">What requirements are essential to carry out the work?. Number </span><span class=\\"dm-list-input__counter\\">1</span>.
    </label>
    <input class=\\"govuk-input govuk-input dm-list-input__item-input\\" id=\\"my-list-2-1\\" name=\\"requirements\\" type=\\"text\\" value=\\"Professionally initiate innovative partnerships.\\">
  </div>
          <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-remove dm-list-input__item-remove--hidden\\" data-module=\\"govuk-button\\">
  Remove <span class=\\"govuk-visually-hidden\\">entry number <span class=\\"dm-list-input__counter\\">1</span></span>
</button>
        </div>
      </div>
<div class=\\"dm-list-input__item dm-list-input__item--visible\\"><div class=\\"dm-list-input__row\\">
          <div class=\\"govuk-form-group dm-list-input__form-group\\">
    <label class=\\"govuk-label dm-list-input__item-label \\" for=\\"my-list-2-2\\">
      <span class=\\"govuk-visually-hidden\\">What requirements are essential to carry out the work?. Number </span><span class=\\"dm-list-input__counter\\">2</span>.
    </label>
    <input class=\\"govuk-input govuk-input dm-list-input__item-input\\" id=\\"my-list-2-2\\" name=\\"requirements\\" type=\\"text\\">
  </div>
          <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-remove dm-list-input__item-remove--hidden\\" data-module=\\"govuk-button\\">
  Remove <span class=\\"govuk-visually-hidden\\">entry number <span class=\\"dm-list-input__counter\\">2</span></span>
</button>
        </div>
      </div>
<div class=\\"dm-list-input__item dm-list-input__item--visible\\"><div class=\\"dm-list-input__row\\">
          <div class=\\"govuk-form-group dm-list-input__form-group\\">
    <label class=\\"govuk-label dm-list-input__item-label \\" for=\\"my-list-2-3\\">
      <span class=\\"govuk-visually-hidden\\">What requirements are essential to carry out the work?. Number </span><span class=\\"dm-list-input__counter\\">3</span>.
    </label>
    <input class=\\"govuk-input govuk-input dm-list-input__item-input\\" id=\\"my-list-2-3\\" name=\\"requirements\\" type=\\"text\\">
  </div>
          <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-remove dm-list-input__item-remove--hidden\\" data-module=\\"govuk-button\\">
  Remove <span class=\\"govuk-visually-hidden\\">entry number <span class=\\"dm-list-input__counter\\">3</span></span>
</button>
        </div>
      </div>
  </div>
  <button type=\\"button\\" class=\\"govuk-button govuk-button--secondary dm-list-input__item-add dm-list-input__item-add--hidden\\" data-module=\\"govuk-button\\">
  Add another requirement (<span class=\\"dm-list-input__js-remaining-counter\\">0</span> remaining)
</button>
</fieldset>
</div>
</body></html>"
`;
